--- a/style/style.css
+++ b/style/style.css
@@ -131,3 +131,18 @@ main{
 .item-description{
     font-weight: 600;
 }
+
+/* skill section */
+.skill-continer {
+	display: flex;
+	gap: 24px;
+	margin-top: 40px;
+}
+.skill {
+	padding: 30px;
+    border-radius: 5px;
+	box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+	margin: 18px 10px;
+}
