--- a/style/style.css
+++ b/style/style.css
@@ -217,3 +217,53 @@ footer input[type="text"], footer input[type="Email"], footer textarea{
 	border: none;
 }
 /* end style footer */
+
+
+/* hide  */
+
+.hide{
+    display: none;
+}
+
+@media screen and (max-width:576px) {
+    .item-title {
+        margin: 20px 0px;
+    }
+    nav,
+    nav > ul,
+    .banner,
+    .skill-continer,
+     .Resume-continer,
+      footer, 
+      .about-items{
+        flex-direction: column;
+    }
+    nav > ul{
+        gap: 10px;
+        margin-top: 25px;
+    }
+    .banner{
+        margin: 10px;
+    }
+    .heder{
+        background-image: none;
+    }
+    .banner-profile-pic{
+        width: 100%;
+    }
+    .btn-primary{
+        margin-bottom: 20px;
+    }
+    footer, .about{
+        padding: 20px;
+    }
+    .fouter-column{
+        width: 100%;
+    }
+    footer input[type="text"],
+     footer input[type="Email"],
+        footer textarea{
+        width: calc(100% - 40px);
+    }
+    
+}
